fix: style of radio buttons on firefox

--- a/templates/g5_helium/custom/scss/form.css
+++ b/templates/g5_helium/custom/scss/form.css
@@ -607,10 +607,20 @@
             span{
               word-wrap: break-word;
             }
-            &:has(input[type='radio']:checked) {
-              background-color: var(--em-form-radio-bgc-checked);
-              border-color: var(--em-form-radio-bc-checked);
+
+            @supports selector(:has(*)) {
+              &:has(input[type='radio']:checked) {
+                background-color: var(--em-form-radio-bgc-checked);
+                border-color: var(--em-form-radio-bc-checked);
+              }
             }
+
+            @supports not (selector(:has(*))) {
+              &.radio {
+                border: none;
+              }
+            }
+
           }
         }
       }
